--- a/src/app/aaacesa/admin-user/admin-user.component.html
+++ b/src/app/aaacesa/admin-user/admin-user.component.html
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="table-responsive">
-        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
 
           <!-- Nombre Column -->
           <ng-container matColumnDef="Nombre">
