--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -90,28 +90,34 @@
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none">
       <!-- Grid column -->
-      <div class="col-md-1 mr-0 pr-0">
-        <h6><strong>Servicios</strong></h6>
-        <ul class="dash">
-          <li>Prealertas</li>
-          <li>Previos</li>
-          <li>Salidas</li>
-          <li>Exportación</li>
-          <li>Finanzas</li>
-        </ul>
+      <div class="col-md-3 mr-0 pr-0">
+        <div class="col-sm-6 col-md-5" style="float: left;">
+          <h6><strong>Servicios</strong></h6>
+          <ul class="dash">
+            <li>Prealertas</li>
+            <li>Previos</li>
+            <li>Salidas</li>
+            <li>Exportación</li>
+            <li>Finanzas</li>
+          </ul>
+        </div>
+        <div class="col-sm-6 col-md-6" style="float: right;">
+          <h6><strong>&nbsp;</strong></h6>
+          <ul class="dash">
+            <li>Consulta de mercancías</li>
+            <li>Abandono</li>
+            <li>Bitácora</li>
+            <li>Admin de Usuarios</li>
+          </ul>
+        </div>
+        
       </div>
       <!-- Grid column -->
-      <hr class="clearfix w-100 d-md-none">
+      <!-- <hr class="clearfix w-100 d-md-none"> -->
       <!-- Grid column -->
-      <div class="col-md-2 ml-0">
-        <h6><strong>&nbsp;</strong></h6>
-        <ul class="dash">
-          <li>Consulta de mercancías</li>
-          <li>Abandono</li>
-          <li>Bitácora</li>
-          <li>Admin de Usuarios</li>
-        </ul>
-      </div>
+      <!-- <div class="col-md-2 ml-0">
+        
+      </div> -->
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none">
       <!-- Grid column -->
@@ -151,8 +157,8 @@
                 <i class="icon-social-twitter"></i>
               </a>
             </li>
-            <li class="list-inline-item" href="https://www.linkedin.com/company/grupo-aaacesa/?viewAsMember=true">
-              <a class="btn-floating btn-sm link-footer mx-1">
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm link-footer mx-1"  href="https://www.linkedin.com/company/grupo-aaacesa/?viewAsMember=true">
                 <i class="icon-social-linkedin"></i>
               </a>
             </li>
