--- a/src/app/aaacesa/admin-user/crear-user/crear-user.component.html
+++ b/src/app/aaacesa/admin-user/crear-user/crear-user.component.html
@@ -17,14 +17,14 @@
       <div class="col">
         <form #creaUserForm="ngForm">
           <div class="container">
-            <div class="row mt-3">
-              <div class="col-md-4">
+            <div class="row mt-2">
+              <div class="col-sm-6 col-md-4">
                 <mat-form-field class="input-full-width">
                   <input type="text" matInput [(ngModel)]="crearUser.RFC" #rfcUserT="ngModel" id="rfcUserT" name="rfcUserT" readonly value="rfcUser" >
                   <span matPrefix>RFC:&nbsp;</span>
                 </mat-form-field>
               </div>
-              <div class="col-md-4">
+              <div class="col-sm-6  col-md-4">
                 <mat-form-field class="input-full-width">
                   <input type="text" matInput [(ngModel)]="crearUser.ClavePatente" #patenteU="ngModel" id="patenteU" name="patenteU" readonly>
                   <span matPrefix>Patente:&nbsp;</span>
@@ -57,7 +57,7 @@
                 </mat-form-field>
               </div>
             </div>
-            <div class="row mt-4">
+            <div class="row mt-3">
               <div class="col-md-4 styled-select">
                 <mat-form-field class="input-full-width">
                   <mat-select [(ngModel)]="crearUser.Perfil.ClavePerfil" class="" #selPerfilUser="ngModel" name="selPerfil" required placeholder="Perfil" >
