--- a/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
@@ -147,7 +147,7 @@
 
           <div class="row mt-3">
             <div class="col-lg-12 text-center">
-              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4 btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
               <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Siguiente</button>            
             </div>
           </div>
@@ -188,7 +188,7 @@
                       
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4 btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
             <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Siguiente</button>            
           </div>
         </div>
@@ -239,7 +239,7 @@
         </div><!-- End Row Inside -->  
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4 btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
             <button (click)="crearExportacion()" class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Enviar</button>
           </div>
         </div>
