--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -37,9 +37,9 @@
 
                   <mat-form-field class="input-full-width">    
                     <input matInput type="text" (input)="cleanReferencia()" maxlength="20" formControlName="houseCtrl" placeholder="Guía House"/>  
-                    <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.required">
+                    <!-- <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.required">
                       * Este campo es obligatorio
-                    </mat-error>
+                    </mat-error> -->
                     <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.pattern">
                       * Carácteres no permitidos
                     </mat-error>     
@@ -179,7 +179,7 @@
 
             <div class="row mt-3">
               <div class="col-lg-12 text-center">
-                <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4 btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+                <button matStepperPrevious class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
                 <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Siguiente</button>            
               </div>
             </div>
@@ -257,7 +257,7 @@
 
           <div class="row mt-3">
             <div class="col-lg-12 text-center">
-              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4 btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
               <button (click)="validarCampos(2)" matStepperNext class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Siguiente</button>            
             </div>
           </div>
@@ -305,7 +305,7 @@
                       
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4 btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
             <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Siguiente</button>            
           </div>
         </div>
@@ -375,7 +375,7 @@
 
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4 btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
             <button (click)="crearPrevio()" class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">&nbsp;Enviar&nbsp;</button>
           </div>
         </div><!-- End Row Inside -->
