--- a/src/app/aaacesa/dialogs/dialog-create-salida.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-salida.component.html
@@ -38,9 +38,9 @@
 
                   <mat-form-field class="input-full-width">    
                     <input matInput type="text" (input)="cleanReferencia()" formControlName="houseCtrl" maxlength="20" placeholder="Guía House"/>  
-                    <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.required">
+                    <!-- <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.required">
                       * Este campo es obligatorio
-                    </mat-error>
+                    </mat-error> -->
                     <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.pattern">
                       * Carácteres no permitidos
                     </mat-error>   
@@ -146,7 +146,7 @@
 
           <div class="row mt-3">
             <div class="col-lg-12 text-center">
-              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4  btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
               <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary btn-sm  btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Siguiente</button>            
             </div>
           </div>
@@ -187,7 +187,7 @@
                       
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4  btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
             <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary btn-sm  btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Siguiente</button>            
           </div>
         </div>
@@ -247,7 +247,7 @@
 
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4  btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
             <button (click)="crearSalida()" class="btn btn-pill btn-primary btn-sm  btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Enviar</button>
           </div>
         </div><!-- End Row -->
