--- a/src/app/aaacesa/admin-user/detalle-user/detalle-user.component.html
+++ b/src/app/aaacesa/admin-user/detalle-user/detalle-user.component.html
@@ -114,7 +114,7 @@
       </div> -->
       <div class="col-lg-12 text-center">
         <button *ngIf="disabled" class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1" (click)="(disabled = !disabled);(disablePerfil = !disablePerfil);" >Cancelar</button>            
-        <button *ngIf="disabled" (click)="detailUserForm.valid ? actualiza() : validar_campos(detailUserForm)"  class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Siguiente</button>            
+        <button *ngIf="disabled" (click)="detailUserForm.valid ? actualiza() : validar_campos(detailUserForm)"  class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Actualizar</button>            
       </div>
     </div>
   </div>
